WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80492
[Qt] Fix the SH4 build after
r109834
https://bugs.webkit.org/show_bug.cgi?id=80492
Summary
[Qt] Fix the SH4 build after r109834
Csaba Osztrogonác
Reported
2012-03-06 22:45:01 PST
http://trac.webkit.org/changeset/109834
broke the ARM/MIPS/SH4 build because their macroassemblers are incomplete. It is a P1/blocker bug, because now nobody can build trunk WebKit for Qt-ARM (eg. for N9)
Attachments
Add MIPS branch(Add,Sub)32 functions
(3.04 KB, patch)
2012-03-07 17:39 PST
,
Chao-ying Fu
no flags
Details
Formatted Diff
Diff
fix for sh4 platform
(2.73 KB, patch)
2012-03-08 07:59 PST
,
thouraya
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2012-03-06 22:50:57 PST
Missing functions from MacroAssemblerARM: - ../../../../Source/JavaScriptCore/jit/JITArithmetic32_64.cpp:624:68: error: no matching function for call to 'JSC::JIT::branchAdd32(JSC::MacroAssemblerARM::ResultCondition, const JSC::AbstractMacroAssembler<JSC::ARMAssembler>::RegisterID&, JSC::AbstractMacroAssembler<JSC::ARMAssembler>::Imm32, const JSC::AbstractMacroAssembler<JSC::ARMAssembler>::RegisterID&)' - ../../../../Source/JavaScriptCore/jit/JITArithmetic32_64.cpp:738:68: error: no matching function for call to 'JSC::JIT::branchSub32(JSC::MacroAssemblerARM::ResultCondition, const JSC::AbstractMacroAssembler<JSC::ARMAssembler>::RegisterID&, JSC::AbstractMacroAssembler<JSC::ARMAssembler>::Imm32, const JSC::AbstractMacroAssembler<JSC::ARMAssembler>::RegisterID&)' Missing functions from MacroAssemblerMIPS: - ../../../../Source/JavaScriptCore/jit/JITArithmetic32_64.cpp:624:68: error: no matching function for call to 'JSC::JIT::branchAdd32(JSC::MacroAssemblerMIPS::ResultCondition, const JSC::AbstractMacroAssembler<JSC::MIPSAssembler>::RegisterID&, JSC::AbstractMacroAssembler<JSC::MIPSAssembler>::Imm32, const JSC::AbstractMacroAssembler<JSC::MIPSAssembler>::RegisterID&)' - ../../../../Source/JavaScriptCore/jit/JITArithmetic32_64.cpp:738:68: error: no matching function for call to 'JSC::JIT::branchSub32(JSC::MacroAssemblerMIPS::ResultCondition, const JSC::AbstractMacroAssembler<JSC::MIPSAssembler>::RegisterID&, JSC::AbstractMacroAssembler<JSC::MIPSAssembler>::Imm32, const JSC::AbstractMacroAssembler<JSC::MIPSAssembler>::RegisterID&)' Missing functions from MacroAssemblerSH4: - ../../../../Source/JavaScriptCore/jit/JITArithmetic32_64.cpp:624:68: error: no matching function for call to 'JSC::JIT::branchAdd32(JSC::MacroAssemblerSH4::ResultCondition, const JSC::AbstractMacroAssembler<JSC::SH4Assembler>::RegisterID&, JSC::AbstractMacroAssembler<JSC::SH4Assembler>::Imm32, const JSC::AbstractMacroAssembler<JSC::SH4Assembler>::RegisterID&)' - ../../../../Source/JavaScriptCore/jit/JITArithmetic32_64.cpp:738:68: error: no matching function for call to 'JSC::JIT::branchSub32(JSC::MacroAssemblerSH4::ResultCondition, const JSC::AbstractMacroAssembler<JSC::SH4Assembler>::RegisterID&, JSC::AbstractMacroAssembler<JSC::SH4Assembler>::Imm32, const JSC::AbstractMacroAssembler<JSC::SH4Assembler>::RegisterID&)'
Oliver Hunt
Comment 2
2012-03-06 22:53:50 PST
Sigh, I'll hit it with a stick in the morning.
Csaba Osztrogonác
Comment 3
2012-03-06 22:54:50 PST
fu@mips.com
,
thouraya.andolsi@st.com
Csaba Osztrogonác
Comment 4
2012-03-06 22:56:00 PST
(In reply to
comment #3
)
>
fu@mips.com
,
thouraya.andolsi@st.com
Oooop, copy/paste error. :) I cc-ed MIPS and SH4 guys too.
Simon Hausmann
Comment 5
2012-03-07 03:31:00 PST
ARM fix landed in
http://trac.webkit.org/changeset/110044
Csaba Osztrogonác
Comment 6
2012-03-07 07:09:59 PST
cc Holger too, he might be interested in fixing MIPS and SH4 platforms.
Chao-ying Fu
Comment 7
2012-03-07 17:39:51 PST
Created
attachment 130734
[details]
Add MIPS branch(Add,Sub)32 functions Hi, Here is a MIPS patch. Thanks! Regards, Chao-ying
WebKit Review Bot
Comment 8
2012-03-07 22:15:17 PST
Comment on
attachment 130734
[details]
Add MIPS branch(Add,Sub)32 functions Clearing flags on attachment: 130734 Committed
r110147
: <
http://trac.webkit.org/changeset/110147
>
WebKit Review Bot
Comment 9
2012-03-07 22:15:22 PST
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 10
2012-03-08 03:45:02 PST
Reopen to fix SH4 build too.
thouraya
Comment 11
2012-03-08 07:59:27 PST
Created
attachment 130822
[details]
fix for sh4 platform
Zoltan Herczeg
Comment 12
2012-03-09 03:44:39 PST
Comment on
attachment 130822
[details]
fix for sh4 platform r=me
WebKit Review Bot
Comment 13
2012-03-09 04:45:36 PST
Comment on
attachment 130822
[details]
fix for sh4 platform Clearing flags on attachment: 130822 Committed
r110289
: <
http://trac.webkit.org/changeset/110289
>
WebKit Review Bot
Comment 14
2012-03-09 04:45:47 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug