[Qt] Fix the MIPS/SH4 build after r109834 https://bugs.webkit.org/show_bug.cgi?id=80492

Patch by Chao-yng Fu <fu@mips.com> on 2012-03-07
Reviewed by Oliver Hunt.

Implement three-argument branch(Add,Sub)32.

* assembler/MacroAssemblerMIPS.h:
(JSC::MacroAssemblerMIPS::add32):
(MacroAssemblerMIPS):
(JSC::MacroAssemblerMIPS::sub32):
(JSC::MacroAssemblerMIPS::branchAdd32):
(JSC::MacroAssemblerMIPS::branchSub32):

git-svn-id: svn://svn.chromium.org/blink/trunk@110147 bbb929c8-8fbe-4397-9dbb-9b2b20218538